Style nav bar components, use overflow-x:hidden on body to prevent scroll bars from appearing when group-3 button enlarges on hover

--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,18 @@
     /*change box-size to include padding and border */
 }
 
+html {
+    font-size: 16px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 100px 70px minmax(calc(100vh - 220px), 1fr) 50px;
+    /* to prevent a scroll bar from appearing during group-3 btn hover effects. */
+    /* Placed on body because scroll bars would be produced if placed on nav-top or group-3 > button, and btn would be cut off if placed on group-3 */
+    overflow-x: hidden;
 }
 
 .title {
@@ -34,11 +42,45 @@ body {
 
 .nav-top {
     grid-area: 2 / 1 / 3 / 2;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--sky-blue);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
+
+/* .menu {
+    width: 100%;
+} */
+
+.menu > button {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10%;
+    background-color: var(--sky-blue);
+    color: black;
+    font-size: 1.1rem;
+    font-weight: 700;
+    border: none;
+    border-left: 1px solid var(--columbia-blue);
+    border-right: 1px solid var(--columbia-blue);
+    border-bottom: 2px solid var(--columbia-blue);
+    box-shadow: 1px 1px 3px 0px var(--prussian-blue);
+}
+
+.menu > button:hover {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    transition: 0.2s ease;
+    cursor: pointer;
+    box-shadow: 2px 2px 4px 0px var(--prussian-blue);
+}
+
+.menu li {
+    visibility: hidden;
+}
+
 
 .img-wrapper {
     grid-area: 3 / 1 / 4 / 2;
@@ -51,12 +93,12 @@ body {
     background-image: url('./img/ocean.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh - 220;
+    min-height: 100vh - 220px;
     max-height: 100vh;
     width: 100%;
     grid-row: 1;
     grid-column: 1;
-    opacity: 0.3;
+    opacity: 0.5;
 }
 
 .content-wrapper {
@@ -69,18 +111,6 @@ body {
     display: flex;
     flex-direction: column;
     padding: 50px 100px;
-}
-
-.greeting {
-    display: flex;
-    background-color: white;
-    border: 8px solid var(--cerulean);
-    border-radius: 5px;
-    box-shadow: 1px 1px 3px 0px var(--prussian-blue-dark);
-    width: 100%;
-    height: 70px;
-    z-index: 0;
-    position: relative;
 }
 
 .footer {
